Date: 25.03.2019
  Major changes:
    - Removed hardened burner mining drill
    - Added steel and electric hardened furnaces
    - Removed "Hardened buildings" technology
    - Added technologies for hardened furnaces
  Balancing:
    - Changed hardened electric mining drill mining area to 6x6
    - Hardened stone furnace:
      - Crafting speed 1.3 ==> 1.25
      - Health 600 ==> 300
  Graphics:
    - Updated hardened stone furnace textures
---------------------------------------------------------------------------------------------------
Version: 0.14.11
Date: 06.03.2019
  Fixes:
    - Fixed nuclear transport belt animation (lr and hr)
    - Fixed Nuclear construction robot animation
    - Fixed Nuclear underground transport belt icon
    - Fixed order for modules
    - Fixed order for Hardened furnace
    - Fixed order for nuclear robots
---------------------------------------------------------------------------------------------------
Version: 0.14.10
Date: 04.03.2019
  Fixes:
    - Fixed nuclear transport belt texture name.
---------------------------------------------------------------------------------------------------
Version: 0.14.9
Date: 04.03.2019
  Balancing:
    - Speed module 4:
      - Speed bonus 0.7 ==> 0.8
      - Consumption bonus 1 ==> 0.8
    - Effectivity module 4:
      - Consumption bonus -0.7 ==> -0.6
    - Productivity module:
      - Productivity bonus 0.12 ==> 0.16
      - Pollution bonus 0.15 ==> 0.125
    - Speed-Effectivity module:
      - Speed bonus 0.7 ==> 0.8
      - Consumption bonus 0.3 ==> 0.2
    - Productivity-Effectivity module:
      - Productivity bonus 0.12 ==> 0.16
      - Consumption bonus 0.3 ==> 0.4
      - Pollution bonus 0.15 ==> 0.125
---------------------------------------------------------------------------------------------------
Version: 0.14.8
Date: 04.03.2019
  Fixes:
    - Fixed science pack names for module technologies.